--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,6 +29,7 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   lottie: ^0.7.0+1
+  animate_do: ^2.0.0
 
 dev_dependencies:
   flutter_test:
